# Patchress

./: .gitignore  CHANGELOG  CMakeLists.txt  CREDITS.TXT  CREDITS.md  Config.in  Makefile  README.md  TODO.txt  init_settings.in  local.conf  meson.build  meson_options.txt
Old/: Makefile  Untitled-1.c  Untitled-2.c  WHATSNEW  asciilistkey.txt
Old/docs/: OS.md
Old/source/dosapps/: Makefile
Old/source/dosapps/w1setver/: Makefile  w1setver.c
Old/source/include/16bit/MPC/: patchress_dos.c  patchress_dos.h
Old/source/main/16BIT/: main.c
Old/source/main/32BIT/WIN9XNT/: FSCheck.frx  FSPCompatible.frm  FSPCompatible.frx  Form1.frm  Form1.frx  FormSplash.frx  InsFinish.frx  InsType.frm  Prepare.frm  Prepare.frx  Press32.vbw  Project1.vbw  PyInstall.frm  WelcomeWindow.frx  splash.frm  vars.bas
Old/source/main/DOS/: MPC.C  MPC.DSK
Old/source/main/old_opwtcm_16BIT/: Makefile  main.c
Old/source/resources/COSMETIC/LINES50/: LINES50.BAT
Old/source/resources/PATCHES/W1SETVER/: info.ini
Old/source/resources/UTILS/: lfn.ini
Old/temp_used_for_baking/: const int width and height = 100;.txt  function selector().txt
docs/: TEMPLATE.md  adding_utility.md  adding_utils.md  bootable_iso.md  building.md  info_ini_struct.md  ini_structures.md
make/basic/: .fixdep.d
scripts/: functions.mk  scripts.mk
source/BASE/: BOOT.IMG  Patcher.bat  autorun.inf  isolinux.cfg
source/BASE/BOOT/: BOOT.IMG
source/BASE/DOSINS/: ADOS.BAT  DOSSHELL.BAT  MEMMAKER.STS  README.TXT
source/BASE/DOSINS/ADOS/: ADOS.CFG  ADOS.COM  ADOS.OVL  ADOS.TXT  AREADME.TXT
source/BASE/DOSINS/DOSSHELL/: DOSSHELL.INI
source/BASE/RES/COSMETIC/: lfn.ini
source/BASE/RES/COSMETIC/CALMIRA/: info.ini
source/BASE/RES/COSMETIC/VESAMAN/: VESAMAN.ASM  VESAMAN.COM  VESAMAN.txt  info.ini
source/BASE/RES/DRIVERS/: lfn.ini
source/BASE/RES/DRIVERS/31VIBES/: AUXCHECK.COM  AUXSTACK.COM  OEMSETUP.INF  VBESVGA.DRV  VBESVGA.SHA  VBESVGA.TXT  VBEVMDIB.3GR  VDDVBE.386  VIDMODES.COM  info.ini
source/BASE/RES/DRIVERS/31VIBES/debug/: VBESVGA.DRV  VBESVGA.SHA  VBESVGA.SYM  VBEVMDIB.3GR  VBEVMDIB.SYM  VDDVBE.386  VDDVBE.SYM
source/BASE/RES/DRIVERS/31VIBES/relsyms/: VBESVGA.SYM  VBEVMDIB.SYM  VDDVBE.SYM
source/BASE/RES/DRIVERS/CREGFIX/: README  cregfix.sys  cregfix.vxd  info.ini  readme.eng.txt  readme.rus.txt
source/BASE/RES/DRIVERS/CREGFIX/install/: system.cb  system.ini
source/BASE/RES/DRIVERS/CUTE/: info.ini
source/BASE/RES/DRIVERS/DOSCD/: info.ini
source/BASE/RES/DRIVERS/ILUVHMEM/: info.ini
source/BASE/RES/DRIVERS/RDISKDOS/: RDISK.COM  info.ini
source/BASE/RES/DRIVERS/WIN1DRV/: 1info.ini  DRVLIB1.LBL  FTG.DRV  IM1024.DRV  IM1024.GRB  IM1024.LGO  INSTALL.BAT  MEMOUSE1.DRV  MEMOUSE2.DRV  MEMOUSE3.DRV  MSMOUSC1.DRV  MSMOUSC2.DRV  README.TXT  SIGMA4.DRV  SIGMA8.DRV  SIGMA8.LGO  TSENG.DRV  TSENG.GRB  TSENG.LGO  VEGA640.DRV  VEGA752.DRV  VIKINGI.DRV  VIKINGI.FON  VIKINGI.GRB  VIKINGI.LGO  VMILO.FON  WY700.DRV  WY700.GRB  info.ini
source/BASE/RES/DRIVERS/XMGR/: XMGR.SYS  info.ini
source/BASE/RES/PATCHES/: lfn.ini
source/BASE/RES/PATCHES/31AHCI/: AHCIFIX.386  info.ini
source/BASE/RES/PATCHES/KERNELEX/: info.ini
source/BASE/RES/PATCHES/W1SETVER/: info.ini
source/BASE/RES/PATCHES/W3XSTART/: MSDOSSYS.INF  W3XSTART.DOC  WRAPPER.BAT  info.ini
source/BASE/RES/PATCHES/WIN9X/: lfn.ini
source/BASE/RES/PATCHES/WIN9X/FIX95CPU/: SYSTEM  (+4 more)
source/BASE/RES/TEST/: lfn.ini
source/BASE/RES/TEST/MCT/: MCTHELP.HLP  info.ini
source/BASE/RES/UTILS/: lfn.ini
source/BASE/RES/UTILS/4DOS/: info.ini
source/BASE/RES/UTILS/4NT/: info.ini
source/BASE/RES/UTILS/7Z/: info.ini
source/BASE/RES/UTILS/ALKY/: EULA.txt  alky.msi  changes.txt  info.ini
source/BASE/RES/UTILS/DOSCD/: info.ini
source/BASE/RES/UTILS/LEGACYUP/: info.ini
source/BASE/RES/UTILS/PGNTFS/: Setup.ini  data1.cab  data1.hdr  data2.cab  info.ini  setup.inx
source/BASE/RES/UTILS/SDD/: info.ini
source/BASE/RES/UTILS/SHUTDOS/: info.ini
source/BASE/RES/UTILS/UNICOWS/: info.ini
source/BASE/RES/UTILS/XRX/: lfn.ini
source/BASE/RUNTIME/VB4/: SETUP.LST
source/DOS/: .gitignore  MPC.C  Makefile  PATCHX16.C  meson.build
source/DOS/APPS/: CMPDAPPS.BAT.in  TEMPLATE.md  meson.build
source/DOS/APPS/31ahci/: 31AHCI.C  meson.build
source/DOS/APPS/31vibes/: 31VIBES.C  meson.build
source/DOS/APPS/cregfix/: CRFIXINS.C  meson.build
source/DOS/APPS/cute/: CTSETUP.C  meson.build
source/DOS/APPS/fix95cpu/: F95CINIT.C  meson.build
source/DOS/APPS/iluvhmem/: XMGRINS.C  meson.build
source/DOS/APPS/lines50/: LINES50.C  meson.build
source/DOS/APPS/patchmem/: PMEMINIT.C  meson.build
source/DOS/APPS/rdiskdos/: RDISKINS.C  meson.build
source/DOS/APPS/shutdos/: INSTALL.C  meson.build
source/DOS/APPS/w1setver/: meson.build  w1setver.c
source/DOS/APPS/wmedos/: medosins.C  meson.build
source/DOS/APPS/xmgr/: XMGRINS.C  meson.build
source/DOS/INCLUDE/: MPCLIB.C  MPCLIB.H
source/MINWIN/mods/: AUTOEXEC.BAT  CONFIG.SYS  MSDOS.SYS  WIN.BAT  changes_will_not_take_effect.txt  logo.SYS  patcher.bat
source/MINWIN/mods/MWCONFIG/: CONTROL.INI  PROGMAN.INI  WIN.INI
source/VB4/: COMMON.BAS  FUNCTION.BAS  MAIN.FRM  MAIN.FRX  MPC.VBP  WELCOME.FRM  WELCOME.FRX
source/checker/: Patcher.bat
source/dosapps/: Makefile
source/dosapps/w1setver/: Makefile  w1setver.c
source/include/16bit/: Makefile  patchress_dos.c  patchress_dos.h  patchress_dos.lib
source/main/16BIT/: Makefile  main.c
source/main/32BIT/WIN9XNT/: BkgdText.frm  BkgdWindow.frm  BkgdWindow.frx  Documentation.frm  Documentation.frx  FSCheck.frm  FSplash2.frm  FormSplash.frm  Functions.bas  InsFinish.frm  InsType.frx  Install.frm  MDIForm1.frm  PInstall.frm  PInstall.frx  PathInput.frm  PathInput.frx  Project1.vbp  PyInstall.frx  SetupWindow.frx  SysUpd.frm  SysUpd.frx  WelcomeWindow.frm
source/resources/COSMETIC/: lfn.ini
source/resources/COSMETIC/LINES50/: info.ini
source/resources/DAIJOUBU/: info.ini
source/resources/PATCHES/: lfn.ini
source/resources/UTILITIY/4DOS/: info.ini
temp_used_for_baking/: function entry_thingy.txt
utils/: isogen.bat  pacman_msys_mingw_utils.sh
(+36 files in other folders)
