## Default meson options ##

# Directories
option('src_base', type : 'string', value : 'source/BASE', description : 'Base directory with 3rd-party binaries to copy into bin_dir')
option('src_dos', type : 'string', value : 'source/DOS', description : 'Source directory for DOS application')
option('bin_dir', type : 'string', value : 'bin', description : 'Output directory for built binaries')

# Utilities
option('dosbox', type : 'string', value : '', description : 'Folder path to DOSBOX Application')
option('tcc', type : 'string', value : '', description : 'Folder path to TurboC++')

# Patchress 16BIT DOS Arguments
option('mpc_dos_args', type : 'string', value : '', description : 'Arguments to pass into Patchress 16-bit DOS application')

# Debug boolean settings
option('quick_run_16bit', type : 'boolean', value : false, description : 'Immediately run 16-bit application in DOSBox after TCC compilation')
option('exit_on_16bit_compilation', type : 'boolean', value : true, description : 'Exit DOSBox after TCC compilation')
option('tcc_output_to_file', type : 'boolean', value : true, description : 'Redirect TCC output to a file instead of console')