# In files like these, only declare source_file, output_file and install_bin_dir.
# 
# An appropriate INFO.INI file must accompany it. You must add this INI file to
# source/BASE/RES/<directory>/INFO.INi
#

sub_variables = declare_dependency(
  variables : {
    'source_file' : 'W1SETVER.C',
    'output_file' : 'W1SETVER.EXE',
    'install_bin_dir' : bin_patches / 'W1SETVER',
  }
)
